test/spec_vectors/return_call_ref/fail/module_7.wat
(module (type $t4 (func (result (ref null func)))) (elem declare func $f44) (func $f34 (result (ref func)) (return_call_ref $t4 (ref.func $f44))) (func $f44 (result (ref null func)) (return_call_ref $t4 (ref.func $f44))))